v1.0.0, 2015-FEB-17 -- release
v1.0.1, 2015-FEB-20 -- Fix a bug at exit after error 
                    -- Added a checker of DES_SERVICES files and prompt user/password
                       when file doesn't exist
                    -- Minor bugs
v1.0.2, 2015-MAR-18 -- Added DES Logo
                    -- Loading bar
                    -- Check whether des service file is read/write only by user,
                       otherwise it change access mode
                    -- Added comments from table to describe_table
                    -- Added command to add comments to tables and columns (add_comment)
                    -- Fix minor issues and improve formatting
v1.0.3, 2015-MAR-18 -- Fix an installation bug
v1.0.5, 2015-MAR-20 -- version 1.0.4 was skipped to be in sync with pip
                    -- Added optional color in config file (default = yes)
                    -- Added quiet option for initialization (easyaccess -q)
                    -- command to open an online tutorial (online_tutorial)
v1.0.6, 2015-XXX-XX -- Background with Ctrl-Z, bg and fg 
                    -- optional loading bar from config.ini file (default = yes)
                    -- print version at startup
                    -- Number of rows received when running queries into a file
                    -- Added command to change parameters from config.ini file from inside
                       easyaccess (config)