@@ -17,7 +17,9 @@ v1.0.5, 2015-MAR-20 -- version 1.0.4 was skipped to be in sync with pip
                     -- command to open an online tutorial (online_tutorial)
 v1.0.6, 2015-XXX-XX -- Background with Ctrl-Z, bg and fg 
                     -- optional loading bar from config.ini file (default = yes)
+                    -- Connections trials added and error information when not connected
                     -- print version at startup
                     -- Number of rows received when running queries into a file
                     -- Added command to change parameters from config.ini file from inside
                        easyaccess (config)
+                
